<resources>
    <string name="app_name">WhatsApp</string>
    <string name="menu_dropdown">Menu dropdown</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="conversations">CONVERSAS</string>
    <string name="calls">CHAMADAS</string>
    <string name="status">STATUS</string>
    <string name="conversation_button">Conversation button</string>

    <!--    Person names -->
    <string name="txt_person1">Dallai</string>
    <string name="txt_person2">Samir</string>
    <string name="txt_person3">Cezin</string>
    <string name="txt_person4">Balkry01</string>
    <string name="txt_person5">RetroGuy</string>
    <string name="txt_person6">Fernando</string>
    <string name="txt_person7">Lais</string>
    <string name="txt_person8">Lucas</string>
    <string name="txt_person9">Zair</string>
    <string name="txt_person10">Sergio</string>

    <!-- Last chat -->
    <string name="last_person1">Tranquilo</string>
    <string name="last_person2">De boa</string>
    <string name="last_person3">Agora não</string>
    <string name="last_person4">Pode ser?</string>
    <string name="last_person5">Bachelor of Engineering in Electronics</string>
    <string name="last_person6">Quando?</string>
    <string name="last_person7">Pode ser no dia 15/08/2021</string>
    <string name="last_person8">Domingo é uma boa</string>
    <string name="last_person9">Podemos começar</string>
    <string name="last_person10">Claro!</string>


    <!--    time chat -->
    <string name="time_person1">22:10</string>
    <string name="time_person2">10:10</string>
    <string name="time_person3">14:12</string>
    <string name="time_person4">13:55</string>
    <string name="time_person5">16:20</string>
    <string name="time_person6">08:10</string>
    <string name="time_person7">19:09</string>
    <string name="time_person8">21:42</string>
    <string name="time_person9">01:24</string>
    <string name="time_person10">04:44</string>
    <string name="image_person">Image Person</string>
    <string name="contatos">Contatos</string>
    <string name="contacts_number">38 contatos</string>
    <string name="arrow_return">Arrow return</string>
    <string name="setup">Configurações</string>
    <string name="pain_phraise">Aqueles que não entendem a dor...</string>
    <string name="qrcode_icon">QrCode Icon</string>
    <string name="account">Conta</string>
    <string name="privacy">Privacidade, segurança, mudar número</string>
    <string name="chat">Conversas</string>
    <string name="theme">Tema, papel de parede, histórico de conversas</string>
    <string name="notification">Notificações</string>
    <string name="messages">Mensagens, grupos, chamadas</string>
    <string name="data">Armazenamento e dados</string>
    <string name="network">Uso de rede, download automático</string>
    <string name="help">Ajuda</string>
    <string name="central">Central de ajuda, fale conosco, política de privacidade</string>
    <string name="friend">Convidar um amigo</string>
    <string name="facebook">FACEBOOK</string>
    <string name="from">from</string>
    <string name="txt_person11">norosh</string>
    <string name="online">online</string>
    <string name="message">Digite uma mensagem</string>
    <string name="chat_item">Larga o sub meu patrão</string>

</resources>