<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_dark"
    tools:context=".Contacts">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrow_return"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/arrow_return"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/arrow_return"
            app:layout_constraintStart_toEndOf="@+id/arrow_return"
            app:layout_constraintTop_toTopOf="@id/arrow_return">

            <TextView
                android:id="@+id/setup_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="@string/setup"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_person"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_person"
        android:scaleType="centerCrop"
        android:src="@drawable/person10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_person"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/image_person"
        app:layout_constraintTop_toTopOf="@+id/image_person">

        <TextView
            android:id="@+id/person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/txt_person6"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pain_phraise"
            android:textColor="@color/green_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:src="@drawable/ic_baseline_qr_code_24"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/constraintLayout3"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout3"
        app:layout_constraintVertical_bias="0.47"
        android:contentDescription="@string/qrcode_icon" />

    <View
        android:id="@+id/line_top"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="20dp"
        android:background="@color/green_light_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_person" />

    <ScrollView
        android:id="@+id/scroll_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/img_key"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_vpn_key_24"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/account"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/privacy"
                        android:textColor="@color/green_gray"
                        android:textSize="16sp"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_chat"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_chat_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/chat"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/theme"
                        android:textColor="@color/green_gray"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"

                >

                <ImageView
                    android:id="@+id/img_notification"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_notifications_24"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/notification"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/messages"
                        android:textColor="@color/green_gray"
                        android:textSize="16sp"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                >

                <ImageView
                    android:id="@+id/img_circle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_data_saver_off_24" />

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/data"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/network"
                        android:textColor="@color/green_gray"
                        android:textSize="16sp"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/img_help"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_help_outline_24"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/help"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/central"
                        android:textColor="@color/green_gray"
                        android:textSize="16sp"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/line_bottom"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:background="@color/green_light_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_person" />

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/img_friend"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_people_alt_24"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/friend"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textColor="@color/green_gray"/>

            <TextView
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
