<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green_dark"
    android:layout_marginVertical="5dp"
    android:id="@+id/layout_cns"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_person"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/image_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/person1"
        android:scaleType="centerCrop"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="18dp"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/image_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_person"
        app:layout_constraintTop_toTopOf="@id/image_person"
        android:layout_marginStart="20dp"
        >

        <TextView
            android:id="@+id/txt_person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_person4"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/txt_time_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_person1"
            android:textColor="@color/green_gray"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/txt_last_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_person1"
            android:textSize="16sp"
            android:textColor="@color/green_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_person_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>