<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_dark"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/green_gray"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/menu_dropdown"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toBottomOf="@id/app_name"
            app:layout_constraintEnd_toStartOf="@id/img_menu"
            app:layout_constraintTop_toTopOf="@id/app_name" />

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/menu_dropdown"
            android:src="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintBottom_toBottomOf="@id/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/app_name" />

        <ImageView
            android:id="@+id/camera"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/camera_icon"
            android:src="@drawable/ic_baseline_camera_alt_24"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/conversations"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name" />

        <TextView
            android:id="@+id/conversations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/camera_icon"
            android:text="@string/conversations"
            android:textColor="@color/green_light"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/camera"
            app:layout_constraintEnd_toStartOf="@id/status"
            app:layout_constraintStart_toEndOf="@id/camera"
            app:layout_constraintTop_toTopOf="@id/camera" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/green_light"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/status"
            app:layout_constraintStart_toEndOf="@+id/camera" />


        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/camera_icon"
            android:text="@string/status"
            android:textColor="@color/green_gray"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/camera"
            app:layout_constraintEnd_toStartOf="@id/calls"
            app:layout_constraintStart_toEndOf="@id/conversations"
            app:layout_constraintTop_toTopOf="@id/camera" />

        <TextView
            android:id="@+id/calls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/camera_icon"
            android:text="@string/calls"
            android:textColor="@color/green_gray"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/status"
            app:layout_constraintTop_toTopOf="@id/camera" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:tint="@color/white"
        android:src="@drawable/ic_baseline_chat_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/conversation_button"
        android:focusable="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:listitem="@layout/chat_item"
        />

</androidx.constraintlayout.widget.ConstraintLayout>